--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,23 @@
 {
-  "name": "Iteration Tracker",
-  "short_name": "Tracker",
-  "description": "Track your successful iterations with visual progress",
+  "name": "Koh-Pilot",
+  "short_name": "Koh-Pilot",
+  "description": "Track your successful repetitions",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1a1b3a",
-  "theme_color": "#6366f1",
+  "background_color": "#000000",
+  "theme_color": "#10b981",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236366f1'%3E%3Cpath d='M9 16.17L5.53 12.7a.996.996 0 1 0-1.41 1.41L9 19l10.5-10.5a.996.996 0 1 0-1.41-1.41L9 16.17z'/%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs%3E%3ClinearGradient id='bg' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23000;stop-opacity:1' /%3E%3Cstop offset='50%25' style='stop-color:%23202020;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23404040;stop-opacity:1' /%3E%3C/linearGradient%3E%3CradialGradient id='sparkle' cx='50%25' cy='50%25' r='50%25'%3E%3Cstop offset='0%25' style='stop-color:%23ffd700;stop-opacity:1' /%3E%3Cstop offset='50%25' style='stop-color:%23ffed4e;stop-opacity:0.8' /%3E%3Cstop offset='100%25' style='stop-color:%23ff6b6b;stop-opacity:0.6' /%3E%3C/radialGradient%3E%3C/defs%3E%3Crect width='512' height='512' fill='url(%23bg)' rx='80'/%3E%3Ccircle cx='256' cy='256' r='180' fill='none' stroke='%2310b981' stroke-width='8' stroke-dasharray='565.48' stroke-dashoffset='113.1'/%3E%3Ctext x='256' y='280' font-family='Arial, sans-serif' font-size='120' text-anchor='middle' fill='%23ffd700'%3E🎉%3C/text%3E%3Ccircle cx='120' cy='120' r='4' fill='url(%23sparkle)' opacity='0.8'%3E%3Canimate attributeName='opacity' values='0.8;0.2;0.8' dur='2s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='392' cy='120' r='3' fill='url(%23sparkle)' opacity='0.6'%3E%3Canimate attributeName='opacity' values='0.6;0.1;0.6' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='120' cy='392' r='3' fill='url(%23sparkle)' opacity='0.7'%3E%3Canimate attributeName='opacity' values='0.7;0.15;0.7' dur='1.8s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='392' cy='392' r='4' fill='url(%23sparkle)' opacity='0.9'%3E%3Canimate attributeName='opacity' values='0.9;0.3;0.9' dur='2.2s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/svg%3E",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236366f1'%3E%3Cpath d='M9 16.17L5.53 12.7a.996.996 0 1 0-1.41 1.41L9 19l10.5-10.5a.996.996 0 1 0-1.41-1.41L9 16.17z'/%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs%3E%3ClinearGradient id='bg' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23000;stop-opacity:1' /%3E%3Cstop offset='50%25' style='stop-color:%23202020;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23404040;stop-opacity:1' /%3E%3C/linearGradient%3E%3CradialGradient id='sparkle' cx='50%25' cy='50%25' r='50%25'%3E%3Cstop offset='0%25' style='stop-color:%23ffd700;stop-opacity:1' /%3E%3Cstop offset='50%25' style='stop-color:%23ffed4e;stop-opacity:0.8' /%3E%3Cstop offset='100%25' style='stop-color:%23ff6b6b;stop-opacity:0.6' /%3E%3C/radialGradient%3E%3C/defs%3E%3Crect width='512' height='512' fill='url(%23bg)' rx='80'/%3E%3Ccircle cx='256' cy='256' r='180' fill='none' stroke='%2310b981' stroke-width='8' stroke-dasharray='565.48' stroke-dashoffset='113.1'/%3E%3Ctext x='256' y='280' font-family='Arial, sans-serif' font-size='120' text-anchor='middle' fill='%23ffd700'%3E🎉%3C/text%3E%3Ccircle cx='120' cy='120' r='4' fill='url(%23sparkle)' opacity='0.8'%3E%3Canimate attributeName='opacity' values='0.8;0.2;0.8' dur='2s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='392' cy='120' r='3' fill='url(%23sparkle)' opacity='0.6'%3E%3Canimate attributeName='opacity' values='0.6;0.1;0.6' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='120' cy='392' r='3' fill='url(%23sparkle)' opacity='0.7'%3E%3Canimate attributeName='opacity' values='0.7;0.15;0.7' dur='1.8s' repeatCount='indefinite'/%3E%3C/circle%3E%3Ccircle cx='392' cy='392' r='4' fill='url(%23sparkle)' opacity='0.9'%3E%3Canimate attributeName='opacity' values='0.9;0.3;0.9' dur='2.2s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/svg%3E",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
